RESOLVED FIXED 26539
CSS sibling selector (~) does not work with :target pseudo class
https://bugs.webkit.org/show_bug.cgi?id=26539
Summary CSS sibling selector (~) does not work with :target pseudo class
Teun
Reported 2009-06-19 05:28:02 PDT
A line of CSS that looks like this: div:target~#second Does not match a <div id="second"/> preceded by a <div id="first"/> with a document loaded with doc.html#first although the ~ and the :target do work separately.
Attachments
Testcase for the sibling and target css (435 bytes, text/html)
2009-06-19 05:28 PDT, Teun
no flags
A very detailed test case which provides testing directions for recreating the bug. (1.99 KB, text/html)
2009-08-25 11:28 PDT, Nathan Hammond
no flags
Updated test case to include a closely related scenario with the adjacent sibling combinator. (4.90 KB, text/html)
2009-08-25 16:34 PDT, Nathan Hammond
no flags
Patch. (10.01 KB, patch)
2011-01-03 09:34 PST, Yael
bdakin: review+
Patch (10.04 KB, patch)
2011-04-28 16:56 PDT, Yael
no flags
Teun
Comment 1 2009-06-19 05:28:47 PDT
Created attachment 31543 [details] Testcase for the sibling and target css
Nathan Hammond
Comment 2 2009-08-25 11:28:05 PDT
Created attachment 38560 [details] A very detailed test case which provides testing directions for recreating the bug. I too just ran into this bug in the latest nightly (r47686) and have created a very detailed test case which provides testing directions for recreating the bug.
Mark Rowe (bdash)
Comment 3 2009-08-25 11:43:06 PDT
Nathan Hammond
Comment 4 2009-08-25 16:34:05 PDT
Created attachment 38575 [details] Updated test case to include a closely related scenario with the adjacent sibling combinator. This bug appears to affect both sibling combinators. I've updated the test case to show the related issue as well. I believe that both issues should be part of this bug and we should rename it.
Stephanie Hobson
Comment 5 2010-04-18 21:00:17 PDT
This is related to Bug 12520
Yael
Comment 6 2011-01-03 09:34:55 PST
Created attachment 77813 [details] Patch. Allow style recalculation for forward siblings of elements that have a forward positional rule. This will not change behavior or impact performance of pages that do not have forward positional riles.
Beth Dakin
Comment 7 2011-04-26 16:35:46 PDT
Comment on attachment 77813 [details] Patch. I was worried that this causes too much style-resolution, but I think it's okay.
Yael
Comment 8 2011-04-28 16:56:26 PDT
Created attachment 91592 [details] Patch Rebaseline
WebKit Commit Bot
Comment 9 2011-04-28 20:34:53 PDT
The commit-queue encountered the following flaky tests while processing attachment 91592 [details]: http/tests/xmlhttprequest/failed-auth.html bug 51835 (author: ap@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 10 2011-04-28 20:36:19 PDT
Comment on attachment 91592 [details] Patch Clearing flags on attachment: 91592 Committed r85296: <http://trac.webkit.org/changeset/85296>
WebKit Commit Bot
Comment 11 2011-04-28 20:36:26 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 12 2011-04-28 20:53:06 PDT
http://trac.webkit.org/changeset/85296 might have broken Windows 7 Release (Tests)
WebKit Commit Bot
Comment 13 2011-04-28 21:07:21 PDT
The commit-queue encountered the following flaky tests while processing attachment 91592 [details]: http/tests/xmlhttprequest/basic-auth.html bug 51613 (authors: ap@webkit.org and eric@webkit.org) http/tests/xmlhttprequest/xmlhttprequest-50ms-download-dispatch.html bug 52016 (author: jchaffraix@webkit.org) The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.