2011-04-28  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Beth Dakin.

        CSS sibling selector (~) does not work with :target pseudo class
        https://bugs.webkit.org/show_bug.cgi?id=26539

        * fast/css/pseudo-target-indirect-sibling-001-expected.txt: Added.
        * fast/css/pseudo-target-indirect-sibling-001.html: Added.
        * fast/css/pseudo-target-indirect-sibling-002-expected.txt: Added.
        * fast/css/pseudo-target-indirect-sibling-002.html: Added.
2011-04-28  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Beth Dakin.

        CSS sibling selector (~) does not work with :target pseudo class
        https://bugs.webkit.org/show_bug.cgi?id=26539

        Allow style recalculation of forward siblings of elements with
        forward positional rules.

        Tests: fast/css/pseudo-target-indirect-sibling-001.html
               fast/css/pseudo-target-indirect-sibling-002.html

        * dom/Element.cpp:
        (WebCore::Element::recalcStyle):

Canonical link: https://commits.webkit.org/75003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85296 268f45cc-cd09-0410-ab3c-d52691b4dbfc